# mp4parse-rust

./: .taskcluster.yml  .travis.yml  Cargo.toml  build.rs
examples/: Makefile  afl-capi.rs
flac2mp4/: Cargo.toml
flac2mp4/src/: main.rs
mp4parse/src/: lib.rs
mp4parse/tests/: public.rs
mp4parse_capi/: Cargo.toml
mp4parse_capi/examples/: Makefile
mp4parse_capi/src/: lib.rs
nulltest/: Cargo.toml
nulltest/src/: main.rs
src/: capi.rs  lib.rs  tests.rs
